# aasdk

./: .gitignore  CMakeLists.txt  Dockerfile  QUICK_REFERENCE.md  Readme.md  TROUBLESHOOTING.md  aasdk.pc.in  build.sh
.github/scripts/docs/: generate_wiki_docs.sh
.github/workflows/: auto-wiki-docs.yml  ci.yml  release.yml
cert/: .gitignore  README.md
cmake_modules/: CPackProjectConfig.cmake  DebPackageFilename.cmake  gitversion.cmake
cmake_modules_old/: Findaap_protobuf.cmake
debian/: postinst  prerm
include/aasdk/: BackwardCompatibility.hpp
include/aasdk/Transport/: DataSink.hpp  TCPTransport.hpp  Transport.hpp  USBTransport.hpp
include/aasdk/USB/: AOAPDevice.hpp
protobuf/: CMakeLists.txt
scripts/: distro_release.sh
src/Channel/Control/: ControlServiceChannel.cpp
src/Channel/MediaSink/Audio/: AudioMediaSinkService.cpp
src/Channel/MediaSink/Video/: VideoMediaSinkService.cpp
src/Error/: Error.cpp
src/Messenger/: Cryptor.cpp  MessageInStream.cpp  MessageInStream.ut.cpp
src/Transport/: DataSink.cpp  SSLWrapper.cpp  TCPTransport.cpp  Transport.cpp  USBTransport.cpp
src/USB/: AOAPDevice.cpp  USBWrapper.cpp
tools/simple/: CMakeLists.txt  README.md  build.sh  main.cpp  usb_init.cpp  usb_init.hpp
